[project]
name = "ltw-blog"
version = "0.0.1"
description = "心悦心享博客"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler==3.11.3",
    "bcrypt==5.0.0",
    "fastapi==0.138.0",
    "python-jose==3.5.0",
    "redis==8.0.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncmy>=0.2.11",
    "concurrent-log-handler==0.9.29",
    "starlette==1.3.1",
    "pyyaml==6.0.3",
    "aiohttp==3.14.1",
    "typing-inspect==0.9.0",
    "dependency-injector==4.49.1",
    "aiomysql==0.3.2",
    "elasticsearch==9.4.1",
    "aiokafka==0.14.0",
    "typing-extensions==4.15.0",
    "aiosmtplib==5.1.2",
    "alibabacloud-dypnsapi20170525==2.0.0",
    "kafka-python==3.0.5",
    "six==1.17.0",
    "pytz==2026.2",
    "alibabacloud-tea-openapi==0.4.4",
    "alibabacloud-tea-util==0.3.14",
    "pydantic==2.13.4",
    "gunicorn==26.0.0",
    "python-multipart==0.0.32",
    "nacos-sdk-python==3.2.0",
    "alibabacloud-oss-v2==1.3.1",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
    "asyncio>=4.0.0",
    "black>=26.5.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.3",
    "black>=26.5.1",
    "isort>=8.0.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.black]
line-length = 120
target-version = ["py314"]
exclude = '''
/(
    \.git
  | \.venv
  | migrations
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [".venv", "migrations", "build", "dist"]

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
ignore-init-module-imports = true
recursive = true
exclude = ".venv,migrations,build,dist"
